<resources>
    <string name="app_name">AwizheFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">موردعلاقه</string>
    <string name="menu">پیام ها</string>
    <string name="profile">پروفایل</string>
    <string name="home">خانه</string>
    <string name="search">جستجو</string>
    <string name="sanaebadi">سنا عبادی</string>
    <string name="address">امارات , دبی , خیابان صفا</string>
    <string name="_00971445205348">00971445205348</string>
    <string name="info_sanaebadi_info">info@sanaebadi.info</string>
    <string name="add_to_card">افزودن به سبد خرید</string>
    <string name="pay_and_post">پرداخت و ارسال</string>
    <string name="ticket_title">عنوان</string>
    <string name="enter_ticket_title">عنوان را وارد کنید ...</string>
    <string name="ticket_content">متن تیکت</string>
    <string name="enter_ticket_content">متن تیکت را وارد کنید ...</string>
    <string name="ticket_notes">نکته ها:</string>
    <string name="send_ticket">ارسال تیکت</string>

    <string name="check_internet">خطا در اتصال به سرور ! لطفا شبکه ی اینترنت خود را بررسی کنید.</string>

    <string name="user_list_error">دیتای دریافتی خالی است.</string>
    <string name="error_fetching_data">خطا در دریافت اطلاعات</string>
    <string name="about_us">درباره ما</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="rate_us">امتیاز دهی</string>
    <string name="share_app">به اشتراک گذاری</string>
    <string name="no_message_yet">هنوز پیامی ندارید !</string>
    <string name="make_your_ticket">تیکت خود را بسازید</string>


</resources>