<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".mvvm.feature.view.fragment.ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_profile"
        android:layout_width="@dimen/image_profile_size"
        android:layout_height="@dimen/image_profile_size"
        android:layout_marginStart="@dimen/default_margin_triple"
        android:layout_marginTop="@dimen/default_margin_triple"
        android:layout_marginEnd="@dimen/default_margin_triple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:fontFamily="@font/iransans_bold"
        android:text="@string/sanaebadi"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_very_huge"
        app:layout_constraintEnd_toEndOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="@id/image_profile"
        app:layout_constraintTop_toBottomOf="@id/image_profile" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:srcCompat="@drawable/ic_address" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin"
        android:fontFamily="@font/iransans_medium"
        android:text="@string/address"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_huge"
        app:layout_constraintStart_toEndOf="@+id/image_address"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_address"
        app:srcCompat="@drawable/ic_phone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin"
        android:fontFamily="@font/iransans_medium"
        android:text="@string/_00971445205348"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_huge"
        app:layout_constraintStart_toEndOf="@+id/image_address"
        app:layout_constraintTop_toBottomOf="@id/image_address" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_mobile"
        app:srcCompat="@drawable/ic_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin"
        android:fontFamily="@font/iransans_medium"
        android:text="@string/info_sanaebadi_info"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_huge"
        app:layout_constraintStart_toEndOf="@+id/image_address"
        app:layout_constraintTop_toBottomOf="@id/image_mobile" />

</androidx.constraintlayout.widget.ConstraintLayout>